# polymarket-latency-arb-simulator

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
src/latarb/: __init__.py  cli.py  config.py  engine.py  market.py  models.py  policy.py  reporting.py
tests/: test_cli_integration.py  test_config.py  test_engine.py
